--- a/src/main/resources/assets/tutorialmod/lang/en_us.json
+++ b/src/main/resources/assets/tutorialmod/lang/en_us.json
@@ -1,6 +1,4 @@
 {
   "item.tutorialmod.sapphire": "Sapphire",
-  "item.tutorialmod.raw_sapphire": "Raw Sapphire",
-  "item.tutorialmod.raw_sapphire_block": "Raw Sapphire Block",
-  "item.tutorialmod.sapphire_block": "Sapphire Block"
+  "item.tutorialmod.raw_sapphire": "Raw Sapphire"
 }
