--- a/src/main/resources/assets/tutorialmod/lang/en_us.json
+++ b/src/main/resources/assets/tutorialmod/lang/en_us.json
@@ -1,4 +1,12 @@
 {
   "item.tutorialmod.sapphire": "Sapphire",
-  "item.tutorialmod.raw_sapphire": "Raw Sapphire"
+  "item.tutorialmod.raw_sapphire": "Raw Sapphire",
+  "block.tutorialmod.raw_sapphire_block": "Raw Sapphire Block",
+  "block.tutorialmod.sapphire_block": "Sapphire Block",
+
+  "block.tutorialmod.sapphire_ore": "Sapphire Ore",
+  "block.tutorialmod.nether_sapphire_ore": "Nether Sapphire Ore",
+  "block.tutorialmod.deepslate_sapphire_ore": "Deepslate Sapphire Ore",
+  "block.tutorialmod.end_stone_sapphire_ore": "Endstone Sapphire Ore"
+
 }
