--- a/src/main/resources/assets/tutorialmod/lang/en_us.json
+++ b/src/main/resources/assets/tutorialmod/lang/en_us.json
@@ -5,6 +5,7 @@
 
   "block.tutorialmod.raw_sapphire_block": "Raw Sapphire Block",
   "block.tutorialmod.sapphire_block": "Sapphire Block",
+  "block.tutorialmod.sound_block": "Sound Block",
 
   "block.tutorialmod.sapphire_ore": "Sapphire Ore",
   "block.tutorialmod.nether_sapphire_ore": "Nether Sapphire Ore",
