created custom tooltips that when hover say something about the item, just put inside the custom item itself and override the appendHoverText method.

--- a/src/main/resources/assets/tutorialmod/lang/en_us.json
+++ b/src/main/resources/assets/tutorialmod/lang/en_us.json
@@ -5,6 +5,8 @@
   "item.tutorialmod.strawberry": "Strawberry",
   "item.tutorialmod.pine_cone": "Pine Cone",
 
+  "tooltip.tutorialmod.metal_detector.tooltip": "Finds valueables underground",
+
   "block.tutorialmod.raw_sapphire_block": "Raw Sapphire Block",
   "block.tutorialmod.sapphire_block": "Sapphire Block",
   "block.tutorialmod.sound_block": "Sound Block",
