--- a/src/main/resources/assets/tutorialmod/lang/en_us.json
+++ b/src/main/resources/assets/tutorialmod/lang/en_us.json
@@ -4,6 +4,13 @@
   "item.tutorialmod.metal_detector": "Metal Detector",
   "item.tutorialmod.strawberry": "Strawberry",
   "item.tutorialmod.pine_cone": "Pine Cone",
+  "item.tutorialmod.sapphire_staff": "Sapphire Staff",
+
+  "item.tutorialmod.sapphire_sword": "Sapphire Sword",
+  "item.tutorialmod.sapphire_shovel": "Sapphire Shovel",
+  "item.tutorialmod.sapphire_pickaxe": "Sapphire Pickaxe",
+  "item.tutorialmod.sapphire_hoe": "Sapphire Hoe",
+  "item.tutorialmod.sapphire_axe": "Sapphire Axe",
 
   "tooltip.tutorialmod.metal_detector.tooltip": "Finds valueables underground",
 
